# CareerPilot-AI---RAG-

./: .gitignore  README.md  package-lock.json  package.json
.claude/skills/website/: SKILL.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routers/: auth.py  career.py  health.py  user.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  career.py  user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: career.py  token.py  user.py
backend/app/services/: auth_service.py  career_service.py  gemini_service.py  vector_store.py
backend/tests/: test_auth_flow.py  test_rag_service.py
docs/: api.md  architecture.md  chat-transcript.md
frontend/: .env.example  components.json  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/public/assets/: README.md
frontend/src/: main.tsx
frontend/src/app/: App.tsx  router.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api-client.ts  auth-api.ts  auth-token.ts  brand-assets.ts  career-api.ts  env.ts  errors.ts  query-client.ts
frontend/src/pages/: AIChatPage.tsx  DashboardPage.tsx  ForgotPasswordPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  ResumePage.tsx  RoadmapPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  auth.ts
(+13 files in other folders)
